Update folder structure

--- a/html/contact.html
+++ b/html/contact.html
@@ -19,7 +19,7 @@
         </button>
         <nav class="nav" id="nav">
             <ul class="nav_bar">
-                <li class="nav__bar--list"><a href="home.html">Home</a></li>
+                <li class="nav__bar--list"><a href="../html/index.html">Home</a></li>
                 <li class="nav__bar--list"><a href="about.html" >About me</a></li>
                 <li class="nav__bar--list"><a href="resume.html" >Resume</a></li>
                 <li class="nav__bar--list"><a href="my_services.html">My Services</a></li>
@@ -31,7 +31,7 @@
             <!-- <div class="dropdown" style="float: right;">
                 <button class="dropbtn"><img  class="menu" src="../images/icons8-menu (1).svg" alt="" style="background-color: aqua;"></button>
                 <div class="dropdown-content">
-                    <a href="home.html">Home</a>
+                    <a href="../html/index.html">Home</a>
                     <a href="about.html" >About me</a>
                     <a href="resume.html" >Resume</a>
                     <a href="my_services.html">My Services</a>
@@ -101,6 +101,6 @@
             <p>copyright © 2021 by <span class="copyright--name"> Biruk Anley.</span> </p>
         </section>   
     </footer>
-    <script src="../style.js"></script> 
+    <script src="../../scripts/style.js"></script> 
 </body>
 </html>
