--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </button>
         <nav class="nav" id="nav">
             <ul class="nav_bar">
-                <li class="nav__bar--list"><a href="home.html">Home</a></li>
+                <li class="nav__bar--list"><a href="index.html">Home</a></li>
                 <li class="nav__bar--list"><a href="html/about.html" >About me</a></li>
                 <li class="nav__bar--list"><a href="html/resume.html" >Resume</a></li>
                 <li class="nav__bar--list"><a href="html/my_services.html">My Services</a></li>
