--- a/html/about.html
+++ b/html/about.html
@@ -15,7 +15,7 @@
         </div>
         <nav class="nav">
             <ul class="nav_bar">
-                <li class="nav__bar--list"><a href="home.html">Home</a></li>
+                <li class="nav__bar--list"><a href="../html/index.html">Home</a></li>
                 <li class="nav__bar--list"><a href="about.html">About me</a></li>
                 <li class="nav__bar--list"><a href="resume.html">Resume</a></li>
                 <li class="nav__bar--list"><a href="my_services.html">My Services</a></li>
