adding styel on css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="logo">
             <p>Biruk Anley</p>
         </div>
@@ -48,7 +48,7 @@
         </section>
     </main>
     
-    <footer>
+    <footer class="footer">
         <section class="holder">
              <section class="phone-number">
                  <h3 class="phone-number--h3">Phone-number</h3>
