home page responsive style

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--To include social media icon-->
-    <link rel="shortcut icon" href="images/icons8-home.svg" type="image/x-icon" alt="an icon of star for representing favicon" >
+    <link rel="shortcut icon" href="images/icons8-home.svg" type="image/x-icon" alt="an icon of homepage for representing favicon" >
     <link rel="stylesheet" href="css/combine.css">
     <link rel="stylesheet" href="css/home.css">
 </head>
-<body>
+<body class="body">
     <header class="header">
         <div class="logo">
             <p>Biruk Anley</p>
@@ -28,7 +28,7 @@
             </ul>  
         </nav>
     </header>
-    <main >
+    <main class="main">
         <img class="picture"  src="images/try.jpg" alt="an image of biruk anley">
         <section class="Introduction" id="home">
            
