--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p class="Introduction__content--describe">I am A Software engineering student.
                 I am intersted in Web development and web design. click down to see more about me
                 </p>   
-                <a href="/html/about.html" class="Introduction__about--button">About Me</a>
+                <a href="html/about.html" class="Introduction__about--button">About Me</a>
             </div>
         </section>
     </main>
