--- a/html/contact.html
+++ b/html/contact.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="shortcut icon" href="../images/icons8-contact-us-64.png" alt="icon for contact us" type="image/x-icon">
     <link rel="stylesheet" href="../css/combine.css">
+    <link rel="stylesheet" href="../css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--To include social media icon-->
 </head>
-<body>
-    <header>
+<body class="body">
+    <header class="header">
         <div class="logo">
             <p>Biruk Anley</p>
         </div>
@@ -27,7 +28,7 @@
             </ul>  
         </nav>
     </header>
-    <main>
+    <main class="main">
         <section class="heading">
             <div>
                 <h2 class="heading--text">Contact Me</h2>
@@ -48,7 +49,7 @@
             </section>
             <section class=suggetion>
                 <form  action="">
-                    <label  class="suggest"  for="suggest"  >message</label><br>
+                    <label  class="suggest"  for="suggest"  >Message</label><br>
                      <textarea name="text-area" id="suggest" cols="30" rows="10"></textarea>
                 </form>
             </section>
@@ -59,7 +60,7 @@
             </section>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
        <section class="holder">
             <section class="phone-number">
                 <h3 class="phone-number--h3">Phone-number</h3>
