--- a/html/video_gallery.html
+++ b/html/video_gallery.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video gallery</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--To include social media icon-->
-    <link rel="stylesheet" href="../css/video_gallery.css">
+    <link rel="shortcut icon" href="../images/icons8-video-gallery-96.png" type="image/x-icon" alt ="vidoe gallery icon">
     <link rel="stylesheet" href="../css/combine.css">
+    <link rel="stylesheet" href="../css/video_gallery.css">
 </head>
 <body>
     <header>
