--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--To include social media icon-->
-    <link rel="stylesheet" href="../css/portfolio.css">
+    <link rel="shortcut icon" href="../images/icons8-photo-gallery-100.png" type="image/x-icon" alt = "an image for photogallery">
     <link rel="stylesheet" href="../css/combine.css">
+    <link rel="stylesheet" href="../css/portfolio.css">
 </head>
 <body>
     <header>
