--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../css/combine.css">
     <link rel="stylesheet" href="../css/portfolio.css">
 </head>
-<body>
-    <header>
+<body class="body">
+    <header class="header">
         <div class="logo">
             <p>Biruk Anley</p>
         </div>
@@ -28,7 +28,7 @@
             </ul>  
         </nav>
     </header>
-    <main>
+    <main class="main">
         <div class="Gallery">Photo Gallery</div>
         <section class="photo">
              <figure>
@@ -66,7 +66,7 @@
         
     </main>
     
-    <footer>
+    <footer class="footer">
         <section class="holder">
              <section class="phone-number">
                  <h3 class="phone-number--h3">Phone-number</h3>
