--- a/html/video_gallery.html
+++ b/html/video_gallery.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../css/combine.css">
     <link rel="stylesheet" href="../css/video_gallery.css">
 </head>
-<body>
-    <header>
+<body class="body">
+    <header class="header">
         <div class="logo">
             <p>Biruk Anley</p>
         </div>
@@ -28,7 +28,7 @@
             </ul>  
         </nav>
     </header>
-    <main>
+    <main class="main">
         <h2 class="title">Video Gallery</h2>
         <section class="description">
             <p>I have an great experiences on editing video of nature  and tutoring how to with some social media.<br>
@@ -62,7 +62,7 @@
         </section>
         
     </main>
-    <footer>
+    <footer class="footer">
         <section class="holder">
              <section class="phone-number">
                  <h3 class="phone-number--h3">Phone-number</h3>
