--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -31,37 +31,38 @@
     <main class="main">
         <div class="Gallery">Photo Gallery</div>
         <section class="photo">
-             <figure>
+             <figure class="photo__figuree">
                  <img class="pic"  src="../images/pic1.jpg" alt="a picture of 4 killo">
-                 <figcaption>This picture  of mine shows the view form 4 killo.  </figcaption>
-             </figure>
-             <figure>
+                 <figcaption class="photo__figuree--caption">This photo was taken around 4 killo.It was the first time when I see such kind of view  </figcaption>
+             </figure >
+             <figure class="photo__figuree">
                  <img class="pic" src="../images/pic2.jpg" alt="a picture of medanialem church">
-                 <figcaption>This image shows Deberetabor Medanialem church which is built by Atse Tewodros</figcaption>
+                 <figcaption class="photo__figuree--caption">This is Deberetabor Medaniaem church . which is built by Atse Tewodros.It was taken on novermber 2019</figcaption>
              </figure>
-             <figure>
+             <figure class="photo__figure">
                  <img class="pic" src="../images/pic3.jpg" alt="a picture of medanialem">
-                 <figcaption>This is another picture of Medanialem on other view</figcaption>
+                 <figcaption class="photo__figuree--caption">This is another picture of Medanialem  church on  the other view</figcaption>
+             </figure >
+             <figure class="photo__figuree">
+                 <img class="pic" src="../images/pic4.jpg" alt="A picture of Kidste mariam">
+                 <figcaption class="photo__figuree--caption">This photo is kidiste Mariam church at Addis Abeba  around 5 kilo.It was taken on december 2019</figcaption>
              </figure>
-             <figure>
-                 <img class="pic" src="../images/pic4.jpg" alt="">
-                 <figcaption>This image shows kidiste Mariam at Addis Abeba 5 kilo</figcaption>
+             <figure class="photo__figuree">
+                 <img class="pic"src="../images/pic5.jpg" alt="A picture of Debre tabor medanilaem">
+                 <figcaption class="photo__figuree--caption">This is also antother work  of which is  Debre tabor Medanaliam church.</figcaption>
              </figure>
-             <figure>
-                 <img class="pic"src="../images/pic5.jpg" alt="">
-                 <figcaption>This is also antother pic of Mine snapshat of Medanaliam church.</figcaption>
-             </figure>
-             <figure>
-                 <img class="pic" src="../images/pic6.jpg" alt="">
-                 <figcaption>This is one of my greatest work of Menilik obelisk.pictured on february 24. </figcaption>
+             <figure class="photo__figuree">
+                 <img class="pic" src="../images/pic6.jpg" alt=" A picture of menilik ">
+                 <figcaption class="photo__figuree--caption">This is one of my greatest work which is known as Great Monument of Addis Abeba which is known as Menilik Squre. which is memeroial for battle of adwa.
+                     the photo was taken on february 15 2020. </figcaption>
                  
              </figure>
 
  
         </section>
         <div class="next">
-            <p>The above pictures are mine click here to see my tutorials and videos</video> </p>
-            <a href="video_gallery.html"><h3 class="next-title">Videos</h3></a>
+            <p class="next__para">The above pictures are mine click here to see my tutorials and videos</video> </p>
+            <a class="next-link" href="video_gallery.html"><h3 class="next-title">Videos</h3></a>
         </div>
         
     </main>
