--- a/html/video_gallery.html
+++ b/html/video_gallery.html
@@ -31,31 +31,31 @@
     <main class="main">
         <h2 class="title">Video Gallery</h2>
         <section class="description">
-            <p>I have an great experiences on editing video of nature  and tutoring how to with some social media.<br>
-                represent some sore og toruing ok so no one weatna to die no one wantes to help me ok so that no is<br>
-                now let sdeal weith eit you have to know some how of the tour soie so to on i so t at os okj t foket </p>
+            <p class="description--para">I have an experiences on editing videos and that makes me excited. especilay nature recorded videos are my favorites.
+                In addition, I give some tutorials which helps studetns and also IT person and some of my tutroials are listed below
+                 you can watch some of them. </p>
         </section>    
         <section class="video_gallery">
             <div class="video_gallery__item">
                 <video src="../video/typingdone.mp4" controls poster="../images/clay-banks-PXaQXThG1FY-unsplash.jpg" loop ></video>
-                <p>this tei sethe des cosldkjf s<br>
-                so that many people can undrsten it ok doyou get it<br>
-                any way no on can unders tnd it si so tha name is mye</p>
+                <p class="gallery--item-des">This is A tutroial that helps typing speed of person with short period of time and It includes 3 website and in this video I am 
+                    going to explain one fo them.
+                </p>
 
             </div>
             
             <div class="video_gallery__item">
                 <video src="../video/wavesilkdone.mp4" controls poster="../images/download.png" loop ></video>
-                <p>this tei sethe des cosldkjf s<br>
-                so that many people can undrsten it ok doyou get it<br>
-                any way no on can unders tnd it si so tha name is mye</p>
+                <p class="gallery--item-des">In this tutorial I am going to explain one of amazing designing tool image that helps you to be creative and 
+                    creats an enjoyment when you get bored.
+                </p>
 
             </div>
             <div class="video_gallery__item">
                 <video src="../video/video to mp3 done.mp4" controls poster="../images/image to text.JPG" loop ></video>
-                <p>this tei sethe des cosldkjf s<br>
-                so that many people can undrsten it ok doyou get it<br>
-                any way no on can unders tnd it si so tha name is mye</p>
+                <p class="gallery--item-des">In this video I am going to show you the most usefull app that used to convert any image that 
+                    consists a some words to formatable document.
+                </p>
 
             </div>
 
